Flip response-time-11 to use ZGC